# japan-fertility-workstyle-analysis

./: .gitignore  README.md  docker-compose.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  sample_panel_data.csv
backend/app/: dependencies.py  main.py
backend/app/api/: global_exception_handler.py  main.py
backend/app/api/routes/: analysis.py
backend/app/application/: dependencies.py  dependendies.py  fertility_analysis_application_service.py
backend/app/application/exception/: MissingColumnsException.py  missing_columns_exception.py
backend/app/config/: web_config.py
backend/app/domain/: dataframe_loader.py
backend/app/domain/model/: fixed_effects_result.py
backend/app/domain/service/: fixed_effects_analysis_service.py
backend/app/infrastructure/: csv_dataframe_loader.py  dependencies.py
backend/tests/: README.md  test_main.py
backend/tests/api/: test_global_exception_handler.py  test_main.py
backend/tests/api/routes/: test_analysis.py
backend/tests/application/: test_dependencies.py  test_fertility_analysis_application_service.py
backend/tests/application/exception/: test_missing_columns_exception.py
backend/tests/domain/model/: test_fixed_effects_result.py
backend/tests/domain/service/: test_fixed_effects_analysis_service.py
backend/tests/infrastructure/: test_csv_dataframe_loader.py  test_dependencies.py
frontend/: .env  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  (+1 more)
(+19 files in other folders)
