[project]
name = "app"
version = "0.1.0"
description = "An analytical tool to evaluate the impact of workstyle reforms on fertility rates in Japan using prefecture-level panel data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "linearmodels>=7.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "python-multipart>=0.0.21",
    "uvicorn>=0.40.0",
]
